Function Identification small fixes and German + Czech translation fixes

--- a/HTML/css/Modules/Function Identification.css
+++ b/HTML/css/Modules/Function Identification.css
@@ -8,6 +8,3 @@ img:not(.diagram) {
 .dark img:not(.diagram) {
     filter: invert(84.6%);
 }
-
-.page-footer::before { content: "Page "; }
-.page-footer::after { content: " of 3"; }
